# QtNetworkMessaging

./: .gitignore  README.md
Client/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
SerialPort/: SerialPort.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.json  server.cpp  server.h
